# ai-agent-orchestration-platform

./: .env.example  .gitignore  AGENTS.md  API_IMPLEMENTATION.md  CLAUDE.md  EXTRACTION_PLAN.md  QUICKSTART.md  README.md  VA_CLAIMS_PRD_REVIEW.md  cleanup_incomplete_sessions.py  main.py  pyproject.toml  requirements.txt  run_api.py  test_api.py  test_api_prd.md  verify_setup.py
.claude/: settings.local.json
agents/: ai_risk_critic.py  dynamic_critic.py  engineering_critic.py  meta_orchestrator.py  moderator.py  prd_critic.py
api/: main.py  state.py
api/models/: api_models.py  execution_models.py
api/routes/: execution.py  refinement.py  sessions.py  upload.py  websocket.py
api/services/: async_orchestrator.py  dynamic_async_orchestrator.py
docs/: API_DASHBOARD.md  BEFORE_AFTER_EXAMPLE.md  DYNAMIC_SYSTEM.md  GEMINI_SETUP.md  GOAL_AND_UPLOAD.md  LOGGING.md  SESSION_SUMMARY.md  test_prd.md
execution-gui/: index.html  package-lock.json  package.json  vite.config.ts
execution-gui/src/: App.css  App.tsx  api.ts  types.ts
execution-gui/src/components/: SidePanel.tsx
execution-gui/src/components/nodes/: AgentNode.tsx  ConvergenceNode.tsx  InputNode.tsx  IterationNode.tsx  index.ts
execution-gui/src/hooks/: useWebSocket.ts
execution-gui/src/pages/: InputPage.tsx  RunPage.tsx
execution-gui/src/utils/: graphBuilder.ts
models/: document_models.py
orchestration/: __init__.py  dynamic_orchestrator.py  looping_orchestrator.py
prompts/: system_prompts.py
src/ai_orchestrator/: __init__.py  convergence.py  exceptions.py  logging.py  types.py
src/ai_orchestrator/agents/: ai_risk_critic.py  dynamic_critic.py  engineering_critic.py  extractor_langextract.py  meta_orchestrator.py  moderator.py  prd_critic.py
src/ai_orchestrator/models/: prd_models.py
src/ai_orchestrator/orchestration/: __init__.py  dynamic_orchestrator.py  looping_orchestrator.py  runner.py
src/ai_orchestrator/plugins/: __init__.py  memory_store.py  model_provider.py  retriever.py  types.py
src/ai_orchestrator/prompts/: system_prompts.py
src/ai_orchestrator/storage/: __init__.py  memory_inmemory.py  memory_sqlite.py  prd_storage.py
src/ai_orchestrator/utils/: convergence.py  llm_factory.py  logger.py
storage/: prd_storage.py
tests/: __init__.py  test_convergence.py  test_memory_stores.py  test_plugins.py  test_runner_smoke.py
ui/: index.html
ui/static/css/: styles.css
ui/static/js/: app.js  visualization.js  websocket.js
utils/: convergence.py
